[Add]aboutページの調整

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,14 +1,40 @@
-<div class="card text-dark">
-  <%= image_tag "22502827_s.jpg",size: "1200x600",class: "mx-auto" %>
+<!--<div class="card text-dark">-->
+  <!--<%#= image_tag "22502827_s.jpg",size: "1200x600",class: "mx-auto" %>-->
 
-  <div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">
+  <!--<div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">-->
 
-      <h1 class="card-title font-weight-bold">About</h1>
-      <p class="card-text font-weight-bold">晩御飯は献立サイトです。<br>
-        登録した献立予定をカレンダーで簡単に確認することができます。<br>
-        また会員様同士でレシピを共有して楽しむこともできます。<br>
-        ぜひご利用ください。
-      </p>
+  <!--    <h1 class="card-title font-weight-bold">About</h1>-->
+  <!--    <p class="card-text font-weight-bold">晩御飯は献立サイトです。<br>-->
+  <!--      登録した献立予定をカレンダーで簡単に確認することができます。<br>-->
+  <!--      また会員様同士でレシピを共有して楽しむこともできます。<br>-->
+  <!--      ぜひご利用ください。-->
+  <!--    </p>-->
 
+<!--  </div>-->
+<!--</div>-->
+<div class ="container">
+  <div class ="row">
+    <div class ="col-10 mx-auto">
+      <%= image_tag "/images/about.png", id: "img-top" %>
+    </div>
+  </div>
+  <div class ="row p-5"></div>
+  <div class ="row">
+    <div class ="col-10 mx-auto">
+      <h1 class = "text-center font-weight-bold">How to use</h1>
+      <%= image_tag "/images/recipe_new.png", id: "img-top" %>
+    </div>
+  </div>
+  <div class ="row p-5"></div>
+  <div class ="row">
+    <div class ="col-10 mx-auto">
+      <%= image_tag "/images/menu.png", id: "img-top" %>
+    </div>
+  </div>
+  <div class ="row p-5"></div>
+  <div class ="row">
+    <div class ="col-10 mx-auto">
+      <%= image_tag "/images/recipes.png", id: "img-top" %>
+    </div>
   </div>
 </div>
