--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -51,7 +51,7 @@
     </div>
     <div class = "col-lg-5 col-md-12">
         <div class ="row">
-            <%= link_to "材料名一覧", foods_path, class: "btn btn-info btn-sm" %>
+            <%= link_to "材料名一覧(材料名を追加)", foods_path, class: "btn btn-info btn-sm" %>
             <div class="table-responsive">
             <table class ="table text-center table-sm">
                 <thead class = "thead-light",style ="fo">
