--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
     <nav class="navbar navbar-light">
       <div class = "container">
         <a class="navbar-brand p-3 "href="/"><%= image_tag asset_path('bangohan.png'),size: "200x80" %></a>
+        <div style= "color: green;"><%= flash[:notice] %></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
