--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,5 +1,5 @@
 <% if @users.exists? %>
-  <div class='container p-5'>
+  <div class='three-container p-5'>
     <div class='row'>
       <div class = "mx-auto", style="width: 75%;">
         <div class ="row">
