--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -19,7 +19,7 @@ body{
 }
 
 .one-container{
-  background-image: image-url("../images/brooke-lark-wMzx2nBdeng-unsplash.jpg");
+  background-image: url("../images/brooke-lark-wMzx2nBdeng-unsplash.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -29,7 +29,7 @@ body{
 }
 
 .two-container{
-  background-image: image-url("../images/jessica-lewis-fJXv46LT7Xk-unsplash.jpg");
+  background-image: url("../images/jessica-lewis-fJXv46LT7Xk-unsplash.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -39,7 +39,7 @@ body{
 }
 
 .three-container{
-  background-image: image-url("../images/nrd-D6Tu_L3chLE-unsplash.jpg");
+  background-image: url("../images/nrd-D6Tu_L3chLE-unsplash.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
