--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -15,26 +15,26 @@
 <div class ="container">
   <div class ="row">
     <div class ="col-10 mx-auto">
-      <%= image_tag "/images/about.png", id: "img-top" %>
+      <%= image_tag "about.png", id: "img-top" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-10 mx-auto">
       <h1 class = "text-center font-weight-bold">How to use</h1>
-      <%= image_tag "/images/recipe_new.png", id: "img-top" %>
+      <%= image_tag "recipe_new.png", id: "img-top" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-10 mx-auto">
-      <%= image_tag "/images/menu.png", id: "img-top" %>
+      <%= image_tag "menu.png", id: "img-top" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-10 mx-auto">
-      <%= image_tag "/images/recipes.png", id: "img-top" %>
+      <%= image_tag "recipes.png", id: "img-top" %>
     </div>
   </div>
 </div>
