--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -66,7 +66,7 @@
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-8 mx-auto">
-      <%= image_tag "/images/about.png", id: "img-top" %>
+      <%= image_tag "about.png", id: "img-top" %>
     </div>
   </div>
 <% end %>
