--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,3 +1,63 @@
 // Place all the styles related to the recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.rank-title{
+  font-family: ヒラギノ明朝 ProN, Hiragino Mincho ProN, sans-serif;
+  color: #6c6c6c;
+}
+
+
+#link:hover{
+  font-size: 30px;
+}
+
+.recipe-box{
+  margin: 20px;
+  transition-duration: 0.5s;
+}
+
+.recipe-box img{
+  cursor: pointer;
+}
+
+.recipe-box:hover img{
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+  transform: translateY(-10px);
+  transition-duration: 0.5s;
+}
+
+.font-recipe{
+  margin: 30px 30px;
+  text-align: center;
+  color: #6c6c6c;
+  font-family: ヒラギノ明朝 ProN, Hiragino Mincho ProN, sans-serif;
+  border-bottom: 3px dotted #000
+}
+
+.point-text{
+  text-align: center;
+  font-size: 1vw;
+  color: #6c6c6c;
+  margin-bottom: 100px;
+}
+
+.text{
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  animation: SlideIn 4.8s;
+}
+
+.recipe-title{
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  color: #6c6c6c;
+}
+
+#recipe-box{
+  margin-bottom: 150px;
+}
+
+.user-name{
+  margin-left: 20px;
+}
