--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
   <body>
     <%= render 'layouts/header' %>
     <%= yield %>
+    <div class = "side-bar">
+      <a class= "side-text", href= "/recipes"><i class="fas fa-egg"></i>  みんなのレシピ</a>
+    </div>
   </body>
 
   <footer class="bg-white p-1 fixed-bottom col-md-auto", id="footer">
