--- a/app/views/menus/_month_index.html.erb
+++ b/app/views/menus/_month_index.html.erb
@@ -6,7 +6,9 @@
   			<%= link_to user_menu_path(current_user.id, menu.id) do %>
 			    <li>
 			    	<%= menu.recipe.recipe_name %>
-			    	<%= image_tag menu.recipe.get_image(100, 100) %>
+			    	<div class = "recipe-box">
+			    		<%= image_tag menu.recipe.get_image(100, 100) %>
+			    	</div>
 			    	<%= link_to '削除', user_menu_path(current_user.id, menu.id), method: :delete, remote: true, class: 'btn btn-danger btn-sm' %>
 			    </li>
 			  <% end %>
