--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.list_btn{
+  border-radius: 0;
+  text-decoration: none;
+  position: relative;
+}
+
+.list_btn:before,
+.list_btn:after{
+  position: absolute;
+
+  width: 100%;
+  height: 0.5px;
+
+  content: '';
+  -webkit-transition: all .3s;
+  transition: all .3s;
+
+  background: #000;
+}
+
+.list_btn:before {
+  top: 0;
+  left: 0;
+}
+
+.list_btn:after {
+  right: 0;
+  bottom: 0;
+}
+
+.list_btn:hover:before,
+.list_btn:hover:after {
+  width: 0;
+}
