--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -12,7 +12,9 @@
           </td>
           <td style="width: 70%"><%= comment.content %></td>
           <% if comment.user == current_user %>
-            <td><%= link_to '削除', recipe_comment_path(comment.recipe.id, comment.id), method: :delete, remote: true, class: 'btn btn-sm btn-danger' %></td>
+            <td class ="point-text">
+              <%= link_to '削除', recipe_comment_path(comment.recipe.id, comment.id), method: :delete, remote: true, class: 'btn btn-sm btn-danger' %>
+            </td>
           <% end %>
         </tr>
       <% end %>
