--- a/app/views/favorites/favorites.html.erb
+++ b/app/views/favorites/favorites.html.erb
@@ -1,12 +1,11 @@
-<div class ="three-container p-5">
+<div class ="one-container p-5">
   <div class ="row">
-    <div class ="col-md-11 offset-md-1">
+    <div class ="col-12">
       <div class="row ml-3">
-        <h3 class="font-weight-bold"><%= @user.name %>さんがいいねしたレシピ一覧</h3>
-        <p class="p-2">(全<%= @favorites.total_count %>件）<p>
+        <h1 class ="text"><%= @user.name %>さん がいいねしたレシピ一覧</h1>
       </div>
       <% if user_signed_in? %>
-        <div><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn btn-success' %></div>
+        <div class ="row p-2"><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn list_btn' %></div>
       <% end %>
       <%= form_tag favorites_users_path(@user), method: :get do %>
       <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
@@ -37,4 +36,5 @@
       <%= paginate @favorites, theme: 'twitter-bootstrap-4' %>
     </div>
   </div>
+  <div class = "row p-5"></div>
 </div>
