--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,5 +1,8 @@
-<div class="two-container p-5">
-	<h1 class="card-title-top font-weight-bold">Weekly menu schedule</h1>
+<div class="one-container p-5">
+	<h1 class="card-title-top font-weight-bold">一週間の献立予定</h1>
+	<div class ="text-center">
+	  <%= link_to '一ヶ月の予定', user_menus_path(current_user.id), class: 'btn list_btn' %>
+	</div>
 	<div class ="row">
 	  <div class="col-md-12 col-sm-12 col-xs-12", id ="week_index">
   		<%= render 'week_index', menus: @menus %>
@@ -13,8 +16,5 @@
 	  <div class ="col-md-9 col-sm-9 col-xs-9">
 	    <%= render 'mylists' %>
 	  </div>
-	</div>
-	<div class ="text-center">
-	  <%= link_to '一ヶ月の予定', user_menus_path(current_user.id), class: 'btn btn-success' %>
 	</div>
 </div>
