--- a/app/views/recipe_foods/index.html.erb
+++ b/app/views/recipe_foods/index.html.erb
@@ -1,4 +1,4 @@
-<div class ="container p-5">
+<div class ="one-container p-5">
   <div class ="row">
     <div class ="col-md-11 offset-md-1">
       <div class="row ml-3">
