--- a/app/views/recipes/confirm.html.erb
+++ b/app/views/recipes/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class = "container p-5">
+<div class = "one-container p-5">
   <h3 class="font-weight-bold p-3">レシピ確認画面</h3>
   <div class = "row">
     <div class = "col-md-6 offset-md-1">
