--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="text-center">
-      <%= link_to "退会する", withdrawal_users_path, method: :patch,class: "btn btn-danger col-1 ml-4", data: { confilm: "本当に退会しますか？" } %>
+      <%= link_to "退会する", withdrawal_users_path, method: :patch,class: "btn btn-danger col-1 ml-4",   %>
       <%= link_to "退会しない", user_path(current_user), class: "btn btn-primary col-1" %>
     </div>
 </div>
