[Fix]レイアウト調整

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -19,7 +19,7 @@
         献立作りが</br>楽しくなる
       </h1>
       <p>「毎日違った献立を立てるのは面倒臭い」</br>
-          「何を作ったのか覚えてなくて、気づいたら同じような献立のローテションになっている」</br>
+          「何を作ったのか覚えてなくて、気づいたら同じような献立のローテーションになっている」</br>
           そんな悩みを抱える主婦や一人暮らしの方の役に立ちたいと思いこのサイトを制作しました。</br>
           このサイトを使えば思わずレシピを書いて共有したくなるはずです。
       </p>
