--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -51,21 +51,21 @@
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
-    <div class ="col-10 mx-auto">
-      <h1 class = "p-top text-center">How to use</h1>
-      <%= image_tag "recipe_new.png", id: "img-top" %>
+    <div class ="col-8 mx-auto">
+      <h1 class = "p-top text-center">使い方</h1>
+      <%= image_tag "STEP1.png", id: "img-top" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
-    <div class ="col-10 mx-auto">
-      <%= image_tag "menu.png", id: "img-top" %>
+    <div class ="col-8 mx-auto">
+      <%= image_tag "STEP2.png", id: "img-top" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
-    <div class ="col-10 mx-auto">
-      <%= image_tag "recipes.png", id: "img-top" %>
+    <div class ="col-8 mx-auto">
+      <%= image_tag "STEP3.png", id: "img-top" %>
     </div>
   </div>
 <% else %>
@@ -76,7 +76,7 @@
         献立作りが</br>楽しくなる
       </h1>
       <p>「毎日違った献立を立てるのは面倒臭い」</br>
-          「何を作ったのか覚えてなくて、気づいたら同じような献立のローテションになっている」</br>
+          「何を作ったのか覚えてなくて、気づいたら同じような献立のローテーションになっている」</br>
           そんな悩みを抱える主婦や一人暮らしの方の役に立ちたいと思いこのサイトを制作しました。</br>
           このサイトを使えば思わずレシピを書いて共有したくなるはずです。
       </p>
