--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,33 +17,33 @@
               </li>
               <li class="nav-item">
                 <%= link_to user_path(current_user), class: 'nav-link text-dark' do %>
-                  <span class="text-dark">my page <i class="fas fa-file-alt"></i></span>
+                  <span class="text-dark">マイページ <i class="fas fa-file-alt"></i></span>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to user_menus_path(current_user.id), class: 'nav-link text-dark' do %>
-                  <span class="text-dark">menu schedule <i class="fas fa-calendar"></i></span>
+                  <span class="text-dark">献立予定 <i class="fas fa-calendar"></i></span>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to users_path, class: 'nav-link text-dark' do %>
-                  <span class="text-dark">members <i class="fas fa-user"></i></span>
+                  <span class="text-dark">会員一覧 <i class="fas fa-user"></i></span>
                 <% end %>
               </li>
               <li class="nav-item text-white">
                 <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
-                  <span class="text-dark">log out <i class="fas fa-sign-out-alt"></i></span>
+                  <span class="text-dark">ログアウト <i class="fas fa-sign-out-alt"></i></span>
                 <% end %>
               </li>
             <% else %>
               <li class="nav-item">
                 <%= link_to  new_user_registration_path, class: 'nav-link text-dark' do %>
-                  <span class="text-dark">sign up <i class="fas fa-user-plus"></i></span>
+                  <span class="text-dark">新規登録 <i class="fas fa-user-plus"></i></span>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to new_user_session_path, class: 'nav-link text-dark' do %>
-                　<span class="text-dark">sign in <i class="fas fa-sign-in-alt"></i></span>
+                　<span class="text-dark">サインイン <i class="fas fa-sign-in-alt"></i></span>
                 <% end %>
               </li>
             <% end %>
