--- a/app/views/menus/_month_index.html.erb
+++ b/app/views/menus/_month_index.html.erb
@@ -2,16 +2,16 @@
   <%= date.day %>
 
   <% menus.each do |menu| %>
-  		<ul>
-  			<%= link_to user_menu_path(current_user.id, menu.id) do %>
-			    <li>
-			    	<%= menu.recipe.recipe_name %>
-			    	<div class = "recipe-box">
-			    		<%= image_tag menu.recipe.get_image(100, 100) %>
-			    	</div>
-			    	<%= link_to '削除', user_menu_path(current_user.id, menu.id), method: :delete, remote: true, class: 'btn btn-danger btn-sm' %>
-			    </li>
-			  <% end %>
-  		</ul>
+    <ul>
+      <li>
+        <%= link_to user_menu_path(current_user.id, menu.id) do %>
+          <%= menu.recipe.recipe_name %></br>
+          <!--<div class = "recipe-box">-->
+          <!--  <%#= image_tag menu.recipe.get_image(100, 100) %>-->
+          <!--</div>-->
+        <% end %>
+        <%= link_to '削除', user_menu_path(current_user.id, menu.id), method: :delete, remote: true, class: 'btn btn-danger btn-sm' %>
+      </li>
+    </ul>
   <% end %>
 <% end %>
