--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -10,10 +10,10 @@
 	</div>
 	<%= render 'layouts/errors', obj: @menu %>
 	<div class ="row">
-	  <div class ="col-md-3 col-sm-3 col-xs-3">
+	  <div class ="col-lg-3 col-md-5">
 	    <%= render 'menu_form', menu: @menu %>
 	  </div>
-	  <div class ="col-md-9 col-sm-9 col-xs-9">
+	  <div class ="col-lg-8 col-md-6 offset-md-1">
 	    <%= render 'mylists' %>
 	  </div>
 	</div>
