--- a/app/views/relationships/_btn.html.erb
+++ b/app/views/relationships/_btn.html.erb
@@ -1,7 +1,10 @@
+<%= link_to followers_user_relationships_path(user) do %>
+  <%= user.followers.count %>
+<% end %>
 <% if current_user != user%>
   <% if current_user.following?(user) %>
-    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-danger" %>
+    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, remote: true, class: "btn list_btn" %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
+    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, remote: true, class: "btn list_btn" %>
   <% end %>
 <% end %>
