--- a/app/views/users/recipes.html.erb
+++ b/app/views/users/recipes.html.erb
@@ -4,7 +4,9 @@
       <div class="row ml-3">
         <h1 class ="text"><%= @user.name %>さん のレシピ一覧</h1>
       </div>
-      <div class ="row p-2"><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn list_btn' %></div>
+      <% if user_signed_in? %>
+        <div class ="row p-2"><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn list_btn' %></div>
+      <% end %>
       <%= form_tag recipes_users_path(@user), method: :get do %>
       <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
           <%= button_tag type: 'submit', class: 'btn btn-warning' do %>
