--- a/app/views/menus/_menu_form.html.erb
+++ b/app/views/menus/_menu_form.html.erb
@@ -8,7 +8,7 @@
           <td><%= f.date_field :start_time, class: "time" %></td>
       </tr>
       <tr>
-          <td><%= f.submit "登録する", class: "btn btn-primary" %></td>
+          <td><%= f.submit "登録する" %></td>
       </tr>
     </tbody>
   </table>
