--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -63,6 +63,11 @@
   height: 80%;
   object-fit: cover;
 }
+#top-main{
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+}
 
 .tab-list {
   display: flex;
@@ -194,4 +199,9 @@
   letter-spacing: 0.12em;
   margin-top: 50px;
   animation: SlideIn 6.4s;
+}
+
+#top-content{
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #dcdcdc;
 }
