--- a/app/views/foods/_food_form.html.erb
+++ b/app/views/foods/_food_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_with model: food, local: true do |f| %>
+<%= form_with model: food, local: false do |f| %>
   <table class = "table table-borderless table-sm">
-    <td><%= f.text_field :food_name, placeholder: "材料名を記入" %></td>
-    <td><%= f.text_field :unit, placeholder: "単位を記入" %></td>
+    <td><%= f.text_field :food_name, placeholder: "材料名を記入", class: "food_name" %></td>
+    <td><%= f.text_field :unit, placeholder: "単位を記入", class: "food_unit" %></td>
     <td><%= f.submit '追加する', class: 'btn btn-primary' %></td>
   </table>
 <% end %>
