--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,10 +1,7 @@
 <div class='one-container p-5'>
   <div class='row'>
     <div class = "mx-auto", style="width: 75%;">
-      <div class ="row">
-        <h3 class="font-weight-bold">材料名一覧</h3>
-        <p class="p-2">(全<%= @foods.total_count %>種）<p>
-      </div>
+    <h1 class="text">材料名一覧</h3>
       <%= render 'layouts/errors', obj:  @food %>
       <table class = "table table-sm">
         <thead class="thead-light">
@@ -12,15 +9,8 @@
           <th>単位</th>
           <th></th>
         </thead>
-        <tbody>
-          <% @foods.each do |food| %>
-            <tr>
-              <td><%= food.food_name %></td>
-              <td><%= food.unit %></td>
-              <td><%= link_to '削除', food_path(food), method: :delete, class: 'btn btn-danger' %></td>
-            </tr>
-          <% end %>
-          <td><%= paginate @foods %></td>
+        <tbody id="foods">
+            <%= render "foods", foods: @foods %>
         </tbody>
       </table>
       <%= render 'food_form', food: @food %>
