--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -14,18 +14,40 @@
 <!--</div>-->
 <div class ="container">
   <div class ="row p-5">
-    <div class = "col-4 mx-auto">
-      <h1 class ="about-title">
-        献立作りが</br>楽しくなる
-      </h1>
-      <p>「毎日違った献立を立てるのは面倒臭い」</br>
-          「何を作ったのか覚えてなくて、気づいたら同じような献立のローテーションになっている」</br>
-          そんな悩みを抱える主婦や一人暮らしの方の役に立ちたいと思いこのサイトを制作しました。</br>
-          このサイトを使えば思わずレシピを書いて共有したくなるはずです。
-      </p>
+    <div class = "col-10 mx-auto">
+      <div class="card text-white">
+        <%= image_tag "oriento-dPUWgZLsOk8-unsplash", id: "img-top" %>
+        <div class="card-img-overlay">
+          <h1 class="text">献立作りが楽しくなる</h1>
+          <p class="card-text">
+            「毎日違った献立を立てるのは面倒臭い」</br>
+            「何を作ったのか覚えてなくて、</br>
+            気づいたら同じような献立のローテーションになっている」</br>
+            そんな悩みを抱える主婦や一人暮らしの方の</br>
+            役に立ちたいと思いこのサイトを制作しました。</br>
+            このサイトを使えば思わずレシピを書いて共有したくなるはずです。
+          </p>
+        </div>
+      </div>
     </div>
-    <div class ="col-8 offset-1 p-3 mx-auto">
-      <%= image_tag "jason-briscoe-GliaHAJ3_5A-unsplash.jpg", id: "img-top" %>
+  </div>
+  <div class ="row p-5"></div>
+  <div class ="row">
+    <div class ="col-8 mx-auto">
+      <h1 class = "recipe-title text-center">使い方</h1>
+      <%= image_tag "STEP1.png", id: "img-top" %>
+    </div>
+  </div>
+  <div class ="row p-5"></div>
+  <div class ="row">
+    <div class ="col-8 mx-auto">
+      <%= image_tag "STEP2.png", id: "img-top" %>
+    </div>
+  </div>
+  <div class ="row p-5"></div>
+  <div class ="row">
+    <div class ="col-8 mx-auto">
+      <%= image_tag "STEP3.png", id: "img-top" %>
     </div>
   </div>
 
