--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,7 +7,7 @@
       <div class ="row p-2"><%= link_to 'レシピ一覧', recipes_path, class: 'btn list_btn' %></div>
       <%= form_tag user_lists_path(current_user.id), method: :get do %>
       <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
-          <%= button_tag type: 'submit', class: 'btn btn-warning' do %>
+          <%= button_tag type: 'submit', class: 'btn btn-light btn-sm' do %>
             <i class="fas fa-search"></i>
           <% end %>
       <% end %>
