--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -26,7 +26,7 @@ $(function() {
           <% end %>
           <%= form_tag recipes_path, method: :get do %>
           <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
-              <%= button_tag type: 'submit', class: 'btn btn-warning btn-sm' do %>
+              <%= button_tag type: 'submit', class: 'btn btn-light btn-sm' do %>
                 <i class="fas fa-search"></i>
               <% end %>
           <% end %>
