--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,7 @@
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h3 class="font-weight-bold"><%= @user.name %> さんの会員情報編集</h3>
+      <%= render 'layouts/errors', obj:  @user %>
       <%= form_with model: @user, local: true do |f| %>
         <table class= "table">
           <tr>
