--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -94,7 +94,7 @@
     </div>
     <div class ="col-lg-5 col-md-12 offset-1 p-3 mx-auto", id= 'image-link'>
       <%= link_to recipes_path do %>
-        <%= image_tag "tomoyo-s-AAptGeIAPMU-unsplash", id: 'img-top'%>
+        <%= image_tag "tomoyo-s-AAptGeIAPMU-unsplash.jpg", id: 'img-top'%>
         <div class="mask">
       		<div class="caption">
               みんなのレシピを見てみる<i class="fas fa-utensils"></i>
