[Fix]本番環境でのエラー修正3

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -16,16 +16,21 @@
   <div class ="row p-5">
     <div class = "col-10 mx-auto">
       <div class="card text-white">
-        <%= image_tag "oriento-dPUWgZLsOk8-unsplash", id: "img-top" %>
+        <%= image_tag "oriento-dPUWgZLsOk8-unsplash.jpg", id: "img-top" %>
         <div class="card-img-overlay">
           <h1 class="text">献立作りが楽しくなる</h1>
           <p class="card-text">
-            「毎日違った献立を立てるのは面倒臭い」</br>
+            サイトを作ったのは、</br>
+            母が「毎日違った献立を立てるのは面倒臭い」</br>
             「何を作ったのか覚えてなくて、</br>
             気づいたら同じような献立のローテーションになっている」</br>
-            そんな悩みを抱える主婦や一人暮らしの方の</br>
-            役に立ちたいと思いこのサイトを制作しました。</br>
-            このサイトを使えば思わずレシピを書いて共有したくなるはずです。
+            とよく口にしていたのがきっかけでした。</br>
+            たしかに"楽しく"献立を作れるサイトがあれば</br>
+            同じ悩みを抱える方達の役に立ち、多くの人に利用して頂けると</br>
+            思いこのサイトを制作しました。</br>
+            利用者様の使い勝手がいいように、親しみやすく</br>
+            すっきりとした見た目のサイトになっております。</br>
+            このサイトを使う内に献立を立てるのが楽しくなるはずです。
           </p>
         </div>
       </div>
