--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -106,18 +106,25 @@
 <% else %>
   <div class ="row p-5"></div>
   <div class ="row p-5">
-    <div class = "col-lg-4 col-md-12 mx-auto">
+    <div class = "col-lg-5 col-md-12 mx-auto">
       <h1 class ="about-title">
         献立作りが</br>楽しくなる
       </h1>
-      <p>「毎日違った献立を立てるのは面倒臭い」</br>
-          「何を作ったのか覚えてなくて、気づいたら同じような献立のローテーションになっている」</br>
-          そんな悩みを抱える主婦や一人暮らしの方の役に立ちたいと思いこのサイトを制作しました。</br>
-          このサイトを使えば思わずレシピを書いて共有したくなるはずです。
+      <p>サイトを作ったのは、</br>
+            母が「毎日違った献立を立てるのは面倒臭い」</br>
+            「何を作ったのか覚えてなくて、</br>
+            気づいたら同じような献立のローテーションになっている」</br>
+            とよく口にしていたのがきっかけでした。</br>
+            たしかに"楽しく"献立を作れるサイトがあれば</br>
+            同じ悩みを抱える方達の役に立ち、多くの人に利用して頂けると</br>
+            思いこのサイトを制作しました。</br>
+            利用者様の使い勝手がいいように、親しみやすく</br>
+            すっきりとした見た目のサイトになっております。</br>
+            このサイトを使う内に献立を立てるのが楽しくなるはずです。
       </p>
       <h4 class ="text-center p-5"><%= link_to "始めてみる", new_user_registration_path, class: "btn list_btn" %></h4>
     </div>
-    <div class ="col-lg-8 col-md-12 offset-1 p-3 mx-auto">
+    <div class ="col-lg-7 col-md-12 offset-1 p-3 mx-auto">
       <%= image_tag "henry-co-7buCxcpXHsg-unsplash.jpg", id: "img-top" %>
     </div>
   </div>
